<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiet Corners</string>
    <string name="explore_button">Explore</string>
    <string name="about_button">About</string>
    <string name="record_button">Record</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_explore">Explore</string>
    <string name="title_activity_about">About</string>
    <string name="current_location">Current Location:</string>
    <string name="record_sound">Record Sound</string>
    <string name="record_light">Record Light</string>
    <string name="open_networks">Open Networks</string>
    <string name="confirm">Confirm</string>
    <string name="record_picture">Take Picture</string>
    <string name="error_getting_maps">Google Play Services were not found or were unavailable</string>
    <string name="about_us">About Us</string>
    <string name="the_app">The App</string>
    <string name="app_info">Quiet Corners is about finding that place which gives you a break from the world. By interacting with other local students like you, we have catalogued places which offers a chance to study or relax. Quiet corners, an application for a peaceful place.</string>
    <string name="team_image">Team Image</string>
    <string name="michael">Michael Ware - Developer, Lead UI Design</string>
    <string name="steven">Steven Brewerse - Developer, Documentation</string>
    <string name="erik">Erik Hendrickson - Developer, Architect</string>
    <string name="team">The Team</string>
    <string name="contact">Contact: erikh1@mail.usf.edu</string>
    <string name="lumen_title">Record Light</string>
    <string name="light_measurement">Light Measurement</string>
    <string name="decibel_measurement">Decibel Measurement</string>
    <string name="save">Save</string>
    <string name="Coments">Comments</string>
    <string name="Brightness">Brightness</string>
    <string name="noiselessness">Noiselessness</string>
    <string name="OverallRating">Overall Rating</string>
    <string name="hasOpenWifi">Has Open Wifi</string>
    <string name="addComment">Add Comment</string>
    <string name="pictureDescription">A picture of the corner</string>
    <string name="Take_Picture">Take a Picture of the Corner</string>
</resources>
