<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/generic_bg_port"
    tools:context=".About">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:showDividers="beginning|middle|end">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAlignment="center"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/about_us"
                    android:id="@+id/textView"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:background="@drawable/ui_info" />
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:id="@+id/textView3"
            android:layout_gravity="center"
            android:background="@drawable/ui_info" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="34dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="150dp"
                        android:id="@+id/imageView"
                        android:contentDescription="@string/team_image"
                        android:minHeight="150dp"
                        android:src="@drawable/ic_launcher"
                        android:minWidth="250dp"
                        android:maxWidth="250dp"
                        android:maxHeight="150dp" />
                </FrameLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/ui_info">

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/michael"
                            android:id="@+id/textView4"
                            android:layout_gravity="center"
                            android:lines="2"
                            android:layout_marginLeft="0dp" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/frameLayout">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/steven"
                            android:id="@+id/textView5"
                            android:layout_gravity="center"
                            android:lines="2"
                            android:layout_marginTop="5dp" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/frameLayout2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/erik"
                            android:id="@+id/textView6"
                            android:layout_gravity="center"
                            android:lines="2"
                            android:layout_marginLeft="0dp"
                            android:layout_marginTop="5dp" />
                    </FrameLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/contact"
                android:id="@+id/textView8"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp" />
        </FrameLayout>

    </LinearLayout>

</FrameLayout>
