<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LocationDetails">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Brightness"
                android:id="@+id/textView"
                android:layout_marginLeft="10dp"
                android:textColor="@color/text" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAlignment="gravity"
                android:gravity="right"
                android:layout_gravity="right"
                android:layout_marginRight="10dp">

                <RatingBar
                    android:id="@+id/rtbLightRating"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:numStars="5"
                    android:rating="3.5"
                    android:isIndicator="false"
                    style="@style/foodRatingBar" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/noiselessness"
                android:id="@+id/textView2"
                android:layout_marginLeft="10dp"
                android:textColor="@color/text" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAlignment="gravity"
                android:gravity="right"
                android:layout_gravity="right"
                android:layout_marginRight="10dp">

                <RatingBar
                    style="@style/foodRatingBar"
                    android:id="@+id/rtbQuietRating"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:numStars="5"
                    android:rating="3.5"
                    android:isIndicator="false" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout3"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/hasOpenWifi"
                android:id="@+id/textView4"
                android:layout_marginLeft="10dp"
                android:textColor="@color/text" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAlignment="gravity"
                android:gravity="right"
                android:layout_gravity="right"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text=""
                    android:layout_alignParentRight="true"
                    android:id="@+id/textView5"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/background" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/OverallRating"
                android:id="@+id/textView3"
                android:layout_marginLeft="10dp"
                android:textColor="@color/text" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAlignment="gravity"
                android:gravity="right"
                android:layout_gravity="right"
                android:layout_marginRight="10dp">

                <RatingBar
                    style="@style/foodRatingBar"
                    android:id="@+id/rtbOverallRating"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:numStars="5"
                    android:rating="3.5"
                    android:isIndicator="false" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
